# ComfyUI_RP_Cast

./: NOTICE  README.md  README_CN.md  README_JP.md  README_KO.md  __init__.py  node_rp_converter.py  pyproject.toml  requirements.txt
core/: __init__.py  filters.py  lora_manager.py  prompt_parser.py  regions.py
nodes/: __init__.py  _rp_txt2img_common.py  _shared.py  node_rp_conditioning.py  node_rp_converter.py  node_rp_detailer.py  node_rp_detailer_qwen.py  node_rp_detailer_zimage.py  node_rp_ksampler.py  node_rp_ksampler_qwen.py  node_rp_ksampler_zimage.py  node_rp_prompt_parser.py  node_rp_ratio_parser.py  node_rp_txt2img_gemini.py  node_rp_txt2img_grok.py  node_rp_txt2img_openai.py
web/js/: rp_nodes.js
workflow/: RP_Cast_GPT2ZIT_workflow.json  RP_Cast_Gemini2ZIT_workflow.json  RP_Cast_Grok2ZIT_workflow.json  RP_Cast_ILXL_workflow.json  RP_Cast_Qwen_workflow.json  RP_Cast_Zimage_workflow.json  RP_Cast_Zit_workflow.json
