[project]
name = "ComfyUI_RP_Cast"
description = "Per-region prompt and LoRA control for SD1.5, SDXL, Z-Image, and Qwen — compatible with multiple model architectures."
version = "0.6.00"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/AISeDam/ComfyUI_RP_Cast"
Issues = "https://github.com/AISeDam/ComfyUI_RP_Cast/issues"

[tool.comfy]
PublisherId = "aisedam"
DisplayName = "ComfyUI_RP_Cast"
Icon = ""
